--- a/style.css
+++ b/style.css
@@ -13,16 +13,19 @@
 	margin-top: 1rem;
 	padding: 1rem;
 	gap: 1rem;
+	border: 0.3rem solid black;
 }
 .display {
 	display: flex;
 	justify-content: end;
 	align-items: center;
 	color: greenyellow;
-	height: 2rem;
+	height: 4rem;
 	background-color: rgb(85, 85, 85);
 	width: 90%;
 	margin: auto;
+	box-shadow: 0.1rem 0.1rem black;
+	border-radius: 0.6rem;
 }
 .keybord {
 	display: flex;
@@ -35,6 +38,7 @@ button {
 	height: 5rem;
 	margin: 0.3rem;
 	margin-left: 0;
+	box-shadow: 0.1rem 0.2rem black;
 }
 .simbols {
 	width: 25%;
