--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 	box-shadow: 0.1rem 0.1rem black;
 	border-radius: 0.6rem;
 }
-.keybord {
+.keyboard {
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -38,6 +38,7 @@ button {
 	margin: 0.3rem;
 	margin-left: 0;
 	box-shadow: 0.1rem 0.2rem black;
+	cursor: pointer;
 }
 .simbols {
 	width: 25%;
