--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
 	box-shadow: 0.1rem 0.1rem black;
 	border-radius: 0.6rem;
 }
+.display p {
+	padding: 1rem;
+}
 .keyboard {
 	display: flex;
 	flex-wrap: wrap;
